k8s/base/nginx-allow-labeled.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: nginx-allow-labeled
spec:
  podSelector:
    matchLabels:
      app: nginx
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              access: "true"
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: ingress-nginx
